--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "angular-mocks": "^1.5.0",
     "autoprefixer": "^6.0.3",
     "babel-core": "^6.2.1",
+    "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-es2015": "^6.5.0",
+    "bootstrap": "^3.3.6",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.0",
+    "eslint": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^2.7.1",
