--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/Foxandxss/angular-webpack-workflow",
   "dependencies": {
-    "angular": "^1.5.0"
+    "angular": "^1.5.0",
+    "qs": "^6.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
@@ -46,6 +47,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.24",
     "karma-webpack": "^1.7.0",
+    "moment": "^2.11.2",
     "node-libs-browser": "^1.0.0",
     "null-loader": "^0.1.1",
     "postcss-loader": "^0.8.0",
